# CyberSec0

./: .gitignore  Cargo.toml  LICENSE  buildloop.sh
assets/: about.md  blog_intro.md  home.md
assets/bios/: nic.md  not-nic.md
assets/blog/: an_old_post.md  an_older_post.md  even_older.md  httpserv.md  mesher.md  munix.md  test-post-pt2.md  test-post.md
assets/categories/: hpp.md  shoutouts.md
assets/posts/: compile-to-pinephone.md  hpp-exploration-1.md  maddie-1.md
assets/static/: CNAME  eevee.txt  global-styles.css
assets/static/eevee/: index.html
assets/static/files/: i3cfg.txt  zshrc.txt
assets/styles/: colors.scss  posts.scss  styles.scss
docs/: CNAME  font.css  global-styles.css  index.html  rss.xml  styles.css
docs/about/: index.html
docs/bios/nic/: index.html
docs/bios/not-nic/: index.html
docs/blog/: index.html
docs/blog/an_old_post/: index.html
docs/blog/an_older_post/: index.html
docs/blog/even_older/: index.html
docs/blog/httpserv/: index.html
docs/blog/maddie-1/: index.html
docs/blog/mesher/: index.html
docs/blog/munix/: index.html
docs/contact/: index.html
docs/hpp/: index.html
docs/shoutouts/: index.html
src/: main.rs  publish.rs  render.rs  templates.rs  unpublish.rs  utils.rs  write_adapter.rs
templates/: about.html  about.html.tplt  bio.html  bio.html.tplt  blog_index.html  blog_index.html.tplt  category_index.html  contact.html  global-styles.css  global-styles.css.tplt  global.html  global.html.tplt  index.html  post.html  post.html.tplt  rss.xml  site_root.html  site_root.html.tplt  styles.css.tplt
(+4 files in other folders)
