[package]
name = "static-blog"
version = "0.1.0"
authors = ["Nic Hartley <nxh9052@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.6.0", default-features = false, features = ["simd"] }
handlebars = "2.0.2"
