[package]
name = "static-blog"
version = "0.1.0"
authors = ["Nic Hartley <nxh9052@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.6.0", default-features = false, features = ["simd"] }
askama = "0.8.0"
walkdir = "2.2.9"
rsass = "0.11.2"
chrono = "0.4.9"
